objects/File__c.object
<CustomObject><fields>
        <fullName>Details__c</fullName>
        <formula>HYPERLINK(Id,"View" ,"_self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Details</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Download__c</fullName>
        <label>Download</label>
        <referenceTo>Download__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>File_description__c</fullName>
        <label>File description</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>File</label><nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Files</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>